Toyota Crown Athlete S

--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -159,7 +159,7 @@
 558 = "Toyota GT86" 
 559 = "Dodge Challenger SRT8" 
 560 = "MB C63 AMG Coupe" 
-561 = "Москвич 427" 
+561 = "Toyota Crown Athlete S" 
 562 = "Nissan Skyline GT-R R34"
 564 = "Танк RC" 
 565 = "ВАЗ-2108" 
