--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -222,7 +222,7 @@
 622 = "Lincoln Continental 10G"
 623 = "Ferrari GTC4Lusso" 
 624 = "Lexus LX570 URJ201"
-625 = "BMW M4 Convertible"
+625 = "BMW M4"
 626 = "Lada Vesta"
 627 = "BMW X5 F85"
 628 = "Toyota Land Cruiser 200"
