--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -12,7 +12,7 @@
 411 = "Kia Stinger" 
 412 = "BMW M5 E39" 
 413 = "Тягач MB Actros"
-414 = "КамАЗ-55111"
+414 = "КамАЗ-55111 (Уборщик)"
 415 = "Lamborghini Huracan" 
 416 = "MB Sprinter 2G (ЕСС)" 
 417 = "Грузовой вертолет" 
