--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -1,6 +1,6 @@
 400 = "BMW X5 E53"
 401 = "Ford Focus III Hatchback" 
-402 = "MB E63 W212" 
+402 = "Mercedes-Benz E63 W212" 
 403 = "Тягач Volvo FH16" 
 404 = "Renault Logan II" 
 405 = "Lamborghini Aventador SVJ" 
@@ -8,23 +8,23 @@
 407 = "Пожарная MAN" 
 408 = "Тягач Scania R-series" 
 409 = "Rolls-Royce Phantom" 
-410 = "MB AMG GT 4-Door Coupe" 
+410 = "Mercedes-Benz AMG GT 4-Door Coupe" 
 411 = "Kia Stinger" 
 412 = "BMW M5 E39" 
-413 = "Тягач MB Actros"
+413 = "Тягач Mercedes-Benz Actros"
 414 = "КамАЗ-55111 (Уборщик)"
 415 = "Lamborghini Huracan" 
-416 = "MB Sprinter 2G (ЕСС)" 
+416 = "Mercedes-Benz Sprinter 2G (ЕСС)" 
 417 = "Грузовой вертолет" 
-418 = "MB Sprinter 2G" 
+418 = "Mercedes-Benz Sprinter 2G" 
 419 = "Nissan Silvia S15" 
 420 = "Grand Cherokee SRT-8 WK" 
-421 = "MB S600L W140" 
+421 = "Mercedes-Benz S600L W140" 
 422 = "УАЗ-452 (2206)" 
 423 = "Фургон мороженщика Mr Whoopee" 
 424 = "Fiat 500 Abarth" 
 425 = "Военный вертолет" 
-426 = "MB Mercedes-Maybach S650" 
+426 = "Mercedes-Maybach S650" 
 427 = "ГАЗ-3302 (Полиция)"
 428 = "Инкассаторский Ford Transit 8G" 
 429 = "Audi RS6 C6" 
@@ -89,7 +89,7 @@
 488 = "Дирижабль" 
 489 = "Cadillac Escalade 4G" 
 490 = "LR Range Rover SVA IV" 
-491 = "MB E55 AMG W210" 
+491 = "Mercedes-Benz E55 AMG W210" 
 492 = "ВАЗ-2109" 
 493 = "Скоростной катер" 
 494 = "Ferrari 458 Italia" 
@@ -101,11 +101,11 @@
 500 = "УАЗ-3163 «Patriot»" 
 501 = "Вертолет RC" 
 502 = "Nissan GT-R R35" 
-503 = "Mitsubishi Lancer Evo IX" 
+503 = "Mitsubishi Lancer Evo IX"
 504 = "Mercedes-Benz VISION AVTR" 
-505 = "MB GLE 63 AMG" 
+505 = "Mercedes-Benz GLE 63 AMG" 
 506 = "BMW M2" 
-507 = "MB E500 W124" 
+507 = "Mercedes-Benz E500 W124" 
 508 = "УАЗ-452 (3741)" 
 509 = "Электросамокат «Xiaomi»" 
 510 = "Велосипед" 
@@ -139,7 +139,7 @@
 538 = "Неизвестно" 
 539 = "Амфибия Vortex" 
 540 = "Lada Priora" 
-541 = "MB AMG GT" 
+541 = "Mercedes-Benz AMG GT" 
 542 = "Lada 4x4 Urban" 
 543 = "BMW M3 E46" 
 544 = "ЗИЛ-131" 
@@ -176,15 +176,15 @@
 576 = "Renault Megane IV" 
 577 = "Большой самолет Авиафлот" 
 578 = "Военный КамАЗ-43118" 
-579 = "MB Gelandewagen G65 W463" 
-580 = "Toyota Mark II (X100)" 
+579 = "Mercedes-Benz Gelandewagen G65 W463" 
+580 = "Toyota Mark II X100" 
 581 = "Мотоцикл BMW S1000RR" 
 582 = "Ford Econoline 150" 
 583 = "Tug" 
 584 = "Прицеп-цистерна" 
 585 = "Subaru Impreza WRX STI GJ" 
 586 = "Мотоцикл Yamaha MT10" 
-587 = "MB CLA45 Shooting Brake" 
+587 = "Mercedes-Benz CLA45 Shooting Brake" 
 588 = "Автобус ЛиАЗ" 
 589 = "Audi TT 3G" 
 590 = "Вагон" 
@@ -218,7 +218,7 @@
 618 = "BMW M8" 
 619 = "Mercedes Benz X-Class"
 620 = "Nissan Titan" 
-621 = "MB E63s W213"
+621 = "Mercedes-Benz E63s W213"
 622 = "Lincoln Continental 10G"
 623 = "Ferrari GTC4Lusso" 
 624 = "Lexus LX570 URJ201"
@@ -233,7 +233,7 @@
 633 = "Lamborghini Urus"
 634 = "BMW X5 G05"
 635 = "Skoda Octavia MK3" 
-636 = "MB G63 4x4"
+636 = "Mercedes-Benz G63 4x4"
 637 = "Bentley Bentayga"
 638 = "Audi Q7 2G"
 639 = "Rolls-Royce Cullinan"
