--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -80,7 +80,7 @@
 479 = "ВАЗ-2110" 
 480 = "Audi R8 2G" 
 481 = "Велосипед Аист" 
-482 = "Микроавтобус Burrito" 
+482 = "Volkswagen Multivan T6" 
 483 = "НефАЗ-5299" 
 484 = "Корабль" 
 485 = "Автобус (Гармошка)" 
@@ -94,7 +94,7 @@
 493 = "Скоростной катер" 
 494 = "Ferrari 458 Italia" 
 495 = "Ford F-150 Raptor" 
-496 = "ЗАЗ-1102 «Таврия»" 
+496 = "ВАЗ-2107" 
 497 = "Полицейский вертолет" 
 498 = "ЛАЗ-695" 
 499 = "ГАЗон NEXT" 
