Dodge Charger SRT Hellcat

--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -157,7 +157,7 @@
 556 = "Monster "A"" 
 557 = "Monster "B"" 
 558 = "Toyota GT86" 
-559 = "Dodge Challenger SRT8" 
+559 = "Dodge Charger SRT Hellcat" 
 560 = "Mercedes-Benz C63 W205" 
 561 = "Toyota Crown Athlete S" 
 562 = "Nissan Skyline GT-R R34"
