fix sounds & veh_info

--- a/data/gtasa_vehicleAudioSettings.cfg
+++ b/data/gtasa_vehicleAudioSettings.cfg
@@ -276,7 +276,7 @@ amazing1                             		0             99     98     0         0.7
 bmwf10                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 jeepsrt                              		0             99     98     0         0.78         1.0          7         1.0          2           0          13         0           0                 0.0
 vaz1111                              		0             76     75     0         0.9          1.0          6         0.890899     -1          0          13         0           17                0.0
-teslams                              		0             -1     -1     0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
+teslams                              		0             300    300    0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
 tsupri                                		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 m8bmw                                  		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 mbxcl                                  		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
@@ -290,7 +290,7 @@ lvesta                               		0             38     37     1         0.9
 bmwx5m                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 tlc200                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 kalina2                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-bmwi8                                		0             -1     -1     0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
+bmwi8                                		0             300    300    0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
 audirs7                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 g63                                  		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 lurus                                		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
@@ -303,9 +303,9 @@ x5br                                 		0             38     37     1         0.9
 bmwm6                                		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 delorean                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 corvetik                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-tescyb                              		0             -1     -1     0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
+tescyb                              		0             300    300    0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
 trscan                                  	0             84     83     0         0.0          1.0          9         0.840896     3           0          13         0           3                 6.0
-mbactros                                	0             84     83     0         0.0          1.0          9         0.840896     3           0          13         0           3                 6.0
+renat                                		0             84     83     0         0.0          1.0          9         0.840896     3           0          13         0           3                 6.0
 fbstruck                                	0             137    136    0         0.7          1.0          7         0.943874     4           0          13         0           12                0.0
 volvovnl                                    0             84     83     0         0.78         1.0          9         0.840896     3           0          13         0           3                 6.0
 quadra                              		0             103    102    1         0.9          1.0          8         1.0          2           0          13         0           2                 0.0
