--- a/data/gtasa_vehicleAudioSettings.cfg
+++ b/data/gtasa_vehicleAudioSettings.cfg
@@ -272,7 +272,7 @@ utiltr1                                     10            -1     -1     0       
 ;
 ; name                                      VehicleType   enginesounds  field_6   field_8      field_C      HornTon   HornHigh     DoorSound   field_19   RadioNum   RadioType   vehTypeForAudio   volumeIncrease
 ; A                                         B             C      D      E         F            G            H         I            J           K          L          M           N                 O
-amazing1                             		0             99     98     0         0.78         1.0          7         1.0          2           0          13         0           0                 0.0
+audirs6                             		0             99     98     0         0.78         1.0          7         1.0          2           0          13         0           0                 0.0
 bmwf10                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 jeepsrt                              		0             99     98     0         0.78         1.0          7         1.0          2           0          13         0           0                 0.0
 vaz1111                              		0             76     75     0         0.9          1.0          6         0.890899     -1          0          13         0           17                0.0
