--- a/data/gtasa_vehicleAudioSettings.cfg
+++ b/data/gtasa_vehicleAudioSettings.cfg
@@ -287,7 +287,7 @@ lusso                                  		0             38     37     1         0
 llx570                                 		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 m4fix                                  		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 lvesta                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-bmwx5m                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
+bmwe34                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 tlc200                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 kalina2                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bmwi8                                		0             300    300    0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
