--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -224,7 +224,7 @@
 624 = "Lexus LX570 URJ201"
 625 = "BMW M4"
 626 = "Lada Vesta"
-627 = "BMW X5 F85"
+627 = "BMW M5 E34"
 628 = "Toyota Land Cruiser 200"
 629 = "Lada Kalina 2"
 630 = "BMW i8"
