Renault T in config

--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -11,7 +11,7 @@
 410 = "Mercedes-Benz AMG GT 4-Door Coupe" 
 411 = "Kia Stinger" 
 412 = "BMW M5 E39" 
-413 = "Тягач Mercedes-Benz Actros"
+413 = "Тягач Renault T"
 414 = "КамАЗ-55111 (Уборщик)"
 415 = "Lamborghini Huracan" 
 416 = "Mercedes-Benz Sprinter 2G (ЕСС)" 
