--- a/data/amz_vehicleAudioSettings.cfg
+++ b/data/amz_vehicleAudioSettings.cfg
@@ -299,7 +299,7 @@ mbgbrabus                              		0             38     37     1         0
 bentayga                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 audiq7                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 cullinan                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-x5br                                 		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
+humh1                                 		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bmwm6                                		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 delorean                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 corvetik                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
