--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -231,7 +231,7 @@
 631 = "Audi RS7"
 632 = "Mercedes-Benz G63 W464" 
 633 = "Lamborghini Urus"
-634 = "BMW X5 G05"
+634 = "Hummer H1"
 635 = "Skoda Octavia MK3" 
 636 = "Mercedes-Benz G63 4x4"
 637 = "Bentley Bentayga"
