--- a/data/amz_vehicleAudioSettings.cfg
+++ b/data/amz_vehicleAudioSettings.cfg
@@ -289,7 +289,6 @@ m4fix                                  		0             38     37     1         0
 lvesta                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bmwe34                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 tlc200                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-kalina2                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bmwi8                                		0             300    300    0         0.78         1.0          3         1.12246      2           0          13         0           4                 0.0
 audirs7                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 g63                                  		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
@@ -309,5 +308,6 @@ renat                                		0             84     83     0         0.0
 fbstruck                                	0             137    136    0         0.7          1.0          7         0.943874     4           0          13         0           12                0.0
 volvovnl                                    0             84     83     0         0.78         1.0          9         0.840896     3           0          13         0           3                 6.0
 quadra                              		0             103    102    1         0.9          1.0          8         1.0          2           0          13         0           2                 0.0
+bathroom                                        0             62     61     2         0.78         1.0          1         1.12246      -1          0          13         0           36                0.0
 ;
 ;the end
