--- a/.CONF/vehicle.conf
+++ b/.CONF/vehicle.conf
@@ -226,7 +226,7 @@
 626 = "Lada Vesta"
 627 = "BMW M5 E34"
 628 = "Toyota Land Cruiser 200"
-629 = "Lada Kalina 2"
+629 = "Ванная"
 630 = "BMW i8"
 631 = "Audi RS7"
 632 = "Mercedes-Benz G63 W464" 
