--- a/data/amz_vehicleAudioSettings.cfg
+++ b/data/amz_vehicleAudioSettings.cfg
@@ -296,7 +296,6 @@ lurus                                		0             38     37     1         0.9
 octavia3                           			0             87     86     0         0.85         1.0          5         1.12246      2           0          13         0           14                0.0
 mbgbrabus                              		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bentayga                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
-audiq7                               		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 cullinan                             		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 humh1                                 		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
 bmwm6                                		0             38     37     1         0.9          1.0          2         1.05946      2           0          13         0           2                 0.0
@@ -308,6 +307,8 @@ renat                                		0             84     83     0         0.0
 fbstruck                                	0             137    136    0         0.7          1.0          7         0.943874     4           0          13         0           12                0.0
 volvovnl                                    0             84     83     0         0.78         1.0          9         0.840896     3           0          13         0           3                 6.0
 quadra                              		0             103    102    1         0.9          1.0          8         1.0          2           0          13         0           2                 0.0
-bathroom                                        0             62     61     2         0.78         1.0          1         1.12246      -1          0          13         0           36                0.0
+bathroom                                    0             62     61     2         0.78         1.0          1         1.12246      -1          0          13         0           36                0.0
+kubelwagen                                  0             93     92     0         0.9          1.0          2         1.25992      2           2          13         0           31                0.0
+zis5                                    	0             142    141    0         0.7          1.0          4         0.943874     3           0          13         0           11                0.0
 ;
 ;the end
