--- a/data/handling.cfg
+++ b/data/handling.cfg
@@ -338,8 +338,8 @@ BMWM6        	2500 6000 2.5 0 0 -0.2 80 0.62 0.89 0.5 5 250 37 16 4 D 7 0.45 0 3
 DELOREAN     	1700.0 4500.0 2.7 0.0 0.0 -0.05 75 0.65 0.70 0.5 5 165.0 25.0 20.0 4 D 8.5 0.5  0  35.0  0.8  0.08  3.0  0.25  -0.15  0.4  0.4  0.26  0.20  26000  310040  104004   0    1   0
 CORVETIK        1500 4000 2 0 0 -0.1 85 0.7 0.9 0.5 5 250 8 50 F P 11 0.45 0 35 1.2 0.12 0 0.28 -0.15 0.5 0.4 0.25 0.5 35000 2800 0 1 1 0
 CYANDK      	2000 4000 2.2 0 0 -0.6 80 0.75 0.85 0.5 5 170 11.2 10 4 P 8 0.5 0 30 0.8 0.08 0 0.35 -0.31 0.5 0 0.38 0.35 40000 40 318800 40 1 22
+HUM1      		2500 6000 2.5 0 0 -0.2 80 0.62 0.89 0.5 5 180 12 20 4 D 7 0.45 0 35 1 0.05 0 0.45 -0.21 0.45 0.6 0.44 0.35 25000 112010 2204 0 0 0
 FBSTR       	2600.0 10202.8 2.5 0.0 0.0 -0.1 90 0.75 0.80 0.47 5 155.0 24.0 10.0 4 D 7.0 0.55  0  35.0  1.0  0.07  0.0  0.40  -0.20  0.5  0.0  0.58  0.33  10000  114001  4   0    1   13
-HUMH1      		1818 3636 2.5 0 0 -0.2 80 0.62 0.89 0.5 5 180 12 20 4 D 7 0.45 0 35 1 0.05 0 0.45 -0.21 0.45 0.6 0.44 0.35 25000 00000019 2204 0 0 0
 ; --- more cars ---------------------------------
 ;
 ; name       mass     turnmass  drag   centreofmass  boy traction           transmission            brakes       steer  suspension       suslines        antidive   seat col  cost      mflags      hflags      lights
